@@ -3,6 +3,9 @@
 	* Low level API: lock argument of fuse_reply_lock should have a
 	'const' qualifier.  Reported by Shachar Sharon
 
+	* Add support for ioctl on directories.  Reported by Antonio SJ
+	Musumeci
+
 2011-10-13  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Reply to request with ENOMEM in case of failure to allocate
